--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <a href="./index.html" class="logo header-logo">Web<span class="accent">Studio</span></a>
       <ul class="navili">
         <li>
-            <a href="/" class="link">Studio</a>
+            <a href="/" class="link head-link">Studio</a>
         </li>
         <li>
-            <a href="" class="link">Portfolio</a>
+            <a href="" class="link head-link">Portfolio</a>
         </li>
         <li>
-            <a href="" class="link">Contacts</a>
+            <a href="" class="link head-link">Contacts</a>
         </li>
       </ul>
     </nav>
@@ -61,19 +61,43 @@
             <h2 class="visually-hidden">Features</h2>
             <ul class="list two-list">
                 <li class="features-dscr">
+                    <div class="strategy-box">
+                    <svg class="strategy-icon" width="64" height="64">
+                        <use href="/images/icons.svg#icon-antenna-1">
+                        </use>
+                    </svg>
+                    </div>
                     <h3 class="benefits">Strategy</h3>
                     <p class="benef-s">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="features-dscr">
+                    <div class="strategy-box">
+                        <svg class="strategy-icon" width="64" height="64">
+                            <use href="/images/icons.svg#icon-clock-1">
+                            </use>
+                        </svg>
+                    </div>
                     <h3 class="benefits">Punctuality</h3>
                     <p class="benef-s">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="features-dscr">
+                    <div class="strategy-box">
+                        <svg class="strategy-icon" width="64" height="64">
+                            <use href="/images/icons.svg#icon-diagram-1">
+                            </use>
+                        </svg>
+                    </div>
                     <h3 class="benefits">Diligence</h3>
                     <p class="benef-s">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="features-dscr">
+                    <div class="strategy-box">
+                        <svg class="strategy-icon" width="64" height="64">
+                            <use href="/images/icons.svg#icon-astronaut-1">
+                            </use>
+                        </svg>
+                    </div>
                     <h3 class="benefits">Technologies</h3>
                     <p class="benef-s">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -90,6 +114,14 @@
                 <div class="employee">
                 <h3 class="people">Mark Guerrero</h3>
                 <p class="ppl-dscr">Product Designer</p>
+                </div>
+                <div class="people-icons">
+                    <svg class="employee-icon" width="40" height="40">
+                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
                 </div>
             </li>
             <li class="list-third">
