--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </nav>
     <address class="contacts"> 
         <ul class="contacts-list">
-            <li>
+            <li class="address-link">
                 <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
            </li>
-           <li>
+           <li class="address-link">
                 <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
     </ul>
@@ -63,7 +63,7 @@
                 <li class="features-dscr">
                     <div class="strategy-box">
                     <svg class="strategy-icon" width="64" height="64">
-                        <use href="/images/icons.svg#icon-antenna-1">
+                        <use href="./images/icons.svg#icon-antenna-1">
                         </use>
                     </svg>
                     </div>
@@ -74,7 +74,7 @@
                 <li class="features-dscr">
                     <div class="strategy-box">
                         <svg class="strategy-icon" width="64" height="64">
-                            <use href="/images/icons.svg#icon-clock-1">
+                            <use href="./images/icons.svg#icon-clock-1">
                             </use>
                         </svg>
                     </div>
@@ -84,7 +84,7 @@
                 <li class="features-dscr">
                     <div class="strategy-box">
                         <svg class="strategy-icon" width="64" height="64">
-                            <use href="/images/icons.svg#icon-diagram-1">
+                            <use href="./images/icons.svg#icon-diagram-1">
                             </use>
                         </svg>
                     </div>
@@ -94,7 +94,7 @@
                 <li class="features-dscr">
                     <div class="strategy-box">
                         <svg class="strategy-icon" width="64" height="64">
-                            <use href="/images/icons.svg#icon-astronaut-1">
+                            <use href="./images/icons.svg#icon-astronaut-1">
                             </use>
                         </svg>
                     </div>
@@ -114,14 +114,28 @@
                 <div class="employee">
                 <h3 class="people">Mark Guerrero</h3>
                 <p class="ppl-dscr">Product Designer</p>
-                </div>
-                <div class="people-icons">
+                <ul people-icons>
+                    <li class="people-icons-list">
                     <svg class="employee-icon" width="40" height="40">
                         <use href="/images/icons.svg#icon-instagram-2"></use>
-                        <use href="/images/icons.svg#icon-twitter-1"></use>
-                        <use href="/images/icons.svg#icon-facebook-1"></use>
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                    </svg>    
+                    </li>
+                    <li class="people-icons-list">
+                        <svg class="employee-icon" width="40" height="40">
+                            <use href="/images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                    </li>
+                    <li class="people-icons-list">
+                        <svg class="employee-icon" width="40" height="40">
+                            <use href="/images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                    </li>
+                    <li class="people-icons-list">
+                        <svg class="employee-icon" width="40" height="40">
+                            <use href="/images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </li>
+                </ul>
                 </div>
             </li>
             <li class="list-third">
