--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <address class="contacts"> 
         <ul class="contacts-list">
             <li class="address-link">
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="link address-link-list">info@devstudio.com</a>
            </li>
            <li class="address-link">
-                <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+                <a href="tel:+110001111111" class="link address-link-list">+11 (000) 111-11-11</a>
             </li>
     </ul>
     </address>
@@ -114,7 +114,7 @@
                 <div class="employee">
                 <h3 class="people">Mark Guerrero</h3>
                 <p class="ppl-dscr">Product Designer</p>
-                <ul people-icons>
+                <ul class="people-icons">
                     <li class="people-icons-list">
                     <svg class="employee-icon" width="40" height="40">
                         <use href="/images/icons.svg#icon-instagram-2"></use>
