--- a/index.html
+++ b/index.html
@@ -116,23 +116,25 @@
                 <p class="ppl-dscr">Product Designer</p>
                 <ul class="people-icons">
                     <li class="people-icons-list">
-                    <svg class="employee-icon" width="40" height="40">
-                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                        <a href="" class="icon-link">
+                    <svg class="employee-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>    
-                    </li>
+                        </a>
+                </li>
                     <li class="people-icons-list">
                         <svg class="employee-icon" width="40" height="40">
-                            <use href="/images/icons.svg#icon-twitter-1"></use>
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                     </li>
                     <li class="people-icons-list">
                         <svg class="employee-icon" width="40" height="40">
-                            <use href="/images/icons.svg#icon-facebook-1"></use>
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                     </li>
                     <li class="people-icons-list">
                         <svg class="employee-icon" width="40" height="40">
-                            <use href="/images/icons.svg#icon-linkedin-1"></use>
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                     </li>
                 </ul>
