--- a/index.html
+++ b/index.html
@@ -123,19 +123,25 @@
                         </a>
                 </li>
                     <li class="people-icons-list">
-                        <svg class="employee-icon" width="40" height="40">
+                        <a href="" class="icon-link">
+                    <svg class="employee-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
+                        </a>
                     </li>
                     <li class="people-icons-list">
-                        <svg class="employee-icon" width="40" height="40">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
+                        </a>
                     </li>
                     <li class="people-icons-list">
-                        <svg class="employee-icon" width="40" height="40">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
+                        </a>
                     </li>
                 </ul>
                 </div>
@@ -145,6 +151,36 @@
                 <div class="employee">
                 <h3 class="people">Tom Ford</h3>
                 <p class="ppl-dscr">Frontend Developer</p>
+                <ul class="people-icons">
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
                 </div>
             </li>
             <li class="list-third">
@@ -152,6 +188,36 @@
                 <div class="employee">
                 <h3 class="people">Camila Garcia</h3>
                 <p class="ppl-dscr">Marketing</p>
+                <ul class="people-icons">
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
                 </div>
             </li>
             <li class="list-third">
@@ -159,6 +225,36 @@
                 <div class="employee">
                 <h3 class="people">Daniel Wilson</h3>
                 <p class="ppl-dscr">UI Designer</p>
+                <ul class="people-icons">
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="people-icons-list">
+                        <a href="" class="icon-link">
+                            <svg class="employee-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
                 </div>
             </li>
         </ul>
@@ -170,7 +266,9 @@
         <h2 class="titles-four">Our Portfolio</h2>
         <ul class="list list-four">
             <li class="part-of-list">
+                <div class="four-section-image">
                 <img src="./images/bank.jpg" alt="Banking App" class="picture" width="360" height="300"/>
+                </div>
                 <div class="foto">
                 <h3 class="three-name">Banking App</h3>
                 <p class="dscr">App</p>
