--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@
                 <div class="four-section-image">
                 <img src="./images/bank.jpg" alt="Banking App" class="picture" width="360" height="300"/>
                 </div>
+                <div class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</div>
                 <div class="foto">
                 <h3 class="three-name">Banking App</h3>
                 <p class="dscr">App</p>
