--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
         <div class="container">
         <h2 class="titles-four">Our Portfolio</h2>
         <ul class="list list-four">
+
             <li class="part-of-list">
                 <div class="four-section-image">
                 <img src="./images/bank.jpg" alt="Banking App" class="picture" width="360" height="300"/>
@@ -276,41 +277,72 @@
                 <p class="dscr">App</p>
                 </div>
             </li>
+
             <li class="part-of-list">
+                <div class="four-section-image">
                 <img src="./images/pay.jpg" alt="Cashless Payment" width="360" height="300"/>
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                Fruit Ecommerce App ·
+                Cloud Storage App</p>
+                </div>
                 <div class="foto">
                 <h3 class="three-name">Cashless Payment</h3>
                 <p class="dscr">Marketing</p>
                 </div>
             </li>
+
             <li class="part-of-list">
+                <div class="four-section-image">
                 <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300"/>
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                Fruit Ecommerce App ·
+                Cloud Storage App</p>
+                </div>
                 <div class="foto">
                 <h3 class="three-name">Meditation App</h3>
                 <p class="dscr">App</p>
                 </div>
             </li>
+
             <li class="part-of-list">
+                <div class="four-section-image">
                 <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300"/>
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                Fruit Ecommerce App ·
+                Cloud Storage App</p>
+                </div>
                 <div class="foto">
                 <h3 class="three-name">Taxi Service</h3>
                 <p class="dscr">Marketing</p>
                 </div>
             </li>
+
             <li class="part-of-list">
+                <div class="four-section-image">
                 <img src="./images/illustration.jpg" alt="Screen Illustrations" width="360" height="300"/>
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                Fruit Ecommerce App ·
+                Cloud Storage App</p>
+                </div>
                 <div class="foto">
                 <h3 class="three-name">Screen Illustrations</h3>
                 <p class="dscr">Design</p>
                 </div>
             </li>
+
             <li class="part-of-list">
+                <div class="four-section-image">
                 <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300"/>
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                Fruit Ecommerce App ·
+                Cloud Storage App</p>
+                </div>
                 <div class="foto">
                 <h3 class="three-name">Online Courses</h3>
                 <p class="dscr">Marketing</p>
                 </div>
             </li>
+
         </ul>
         </div>
     </section>
