--- a/index.html
+++ b/index.html
@@ -349,11 +349,46 @@
     </main>
 
     <footer class="under">
-    <div class="container">
-    <a href="./index.html" class="logo foot-logo">Web<span class="accent-foot">Studio</span></a>
+    <div class="container footer-container">
+    <div class="footer-logo-und-p">
+        <a href="./index.html" class="logo foot-logo">Web<span class="accent-foot">Studio</span></a>
       <p class="foot-parag">Increase the flow of customers and
         sales for your business with digital
         marketing & growth solutions.</p>
+    </div>
+    <div class="footer-icons">
+        <p class="footer-text">Social media</p>
+        <ul class="people-icons footer-icons-list">
+            <li class="people-icons-list">
+                <a href="" class="icon-link">
+                    <svg class="employee-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="people-icons-list">
+                <a href="" class="icon-link">
+                    <svg class="employee-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="people-icons-list">
+                <a href="" class="icon-link">
+                    <svg class="employee-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="people-icons-list">
+                <a href="" class="icon-link">
+                    <svg class="employee-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
     </div>
     </footer>
 </body>
