--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <a href="/" class="link head-link">Studio</a>
         </li>
         <li>
-            <a href="" class="link head-link">Portfolio</a>
+            <a href="" class="link">Portfolio</a>
         </li>
         <li>
-            <a href="" class="link head-link">Contacts</a>
+            <a href="" class="link">Contacts</a>
         </li>
       </ul>
     </nav>
